# truck

ackermann_truck/: CMakeLists.txt  package.xml
ackermann_truck/launch/: ackermann_truck.launch.yaml  ackermann_truck_rviz.launch.yaml  gayshit.yaml  rviz.launch.yaml
ackermann_truck/rviz/: ackermann_truck.rviz
ackermann_truck/urdf/: ackermann_truck.urdf  ackermann_truck.xacro
ackm/: package.xml  setup.cfg  setup.py
ackm/launch/: rviz.launch.py
ackm/urdf/: ackm.urdf.xacro
